2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/import_gcry.py: Accept space between # and include.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/setjmp.S [__ia64__]: Include ./ia64/longjmp.S.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Fine grainely disable warnings on lexer. Remove Wno-error on it.

	* grub-core/Makefile.core.def (normal): Remove -Wno-error.
	* grub-core/script/lexer.c: Declare yytext_ptr to avoid having
	yylex_strncpy.
	* grub-core/script/yylex.l: Add fine-grained #pragma.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/string.h (memcpy) [GRUB_UTIL]:
	New inline function.
	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h (memcpy) [GRUB_UTIL]:
	Likewise.
	(memset) [GRUB_UTIL]: Likewise.
	(memcmp) [GRUB_UTIL]: Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_memcpy): Declare grub_memcpy with static
	inline function rather than a define.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c: Add missing include.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/grub-ofpathname.c: Add missing include.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (grub_exit): Add missing zeroing-out.
	* grub-core/lib/i386/reboot_trampoline.S (grub_reboot_start):
	Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/lzopio.c (test_header): Fix incorrect memcmp instead of
	grub_memcmp usage.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Add datarootdir as per automake manual
	suggestion.
	* util/grub-mknetdir.in: Likewise.

2011-10-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/10_hurd.in: Add datarootdir as per automake manual
	suggestion.
	* util/grub.d/10_kfreebsd.in: Likewise.
	* util/grub.d/10_linux.in: Likewise.
	* util/grub.d/10_netbsd.in: Likewise.